# recamera-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.cargo/: config.toml
crates/recamera/: Cargo.toml
crates/recamera-camera/: Cargo.toml
crates/recamera-camera/src/: lib.rs
crates/recamera-cvi-sys/: Cargo.toml  build.rs
crates/recamera-cvi-sys/src/: bindings.rs  lib.rs
crates/recamera-infer/: Cargo.toml
crates/recamera-infer/src/: lib.rs
crates/recamera-logging/src/: lib.rs
crates/recamera-rs485/src/: lib.rs
crates/recamera-storage/src/: lib.rs
crates/recamera/src/: lib.rs
docs/: veo-sidewalk-project.md
scripts/: generate-bindings.sh
