[workspace]
resolver = "2"
members = [
    "crates/recamera-core",
    "crates/recamera-logging",
    "crates/recamera-config",
    "crates/recamera-storage",
    "crates/recamera-uart",
    "crates/recamera-rs485",
    "crates/recamera-system",
    "crates/recamera-cvi-sys",
    "crates/recamera-camera",
    "crates/recamera-infer",
    "crates/recamera",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anthropics/recamera-rs"
rust-version = "1.85"
